fixed bug manifest

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
     
     <script type="text/javascript" src="./assets/js/jquery.js"></script>
-    <link rel="manifest" href="/manifest.json">
+    <link rel="manifest" href="manifest.json">
     <script type="text/javascript">
         if ('serviceWorker' in navigator ) {
             navigator.serviceWorker.register('sw.js')
