--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </button>
 
         <div class="collapse navbar-collapse navbar-nav  menu list-menu" id="navbarSupportedContent">    
-            <a type="button" href="/" class="btn-menu    ">Home</a>
+            <a type="button" href="./index.html" class="btn-menu    ">Home</a>
             <a type="button"  href='./planos.html' class="btn-menu    ">Planos</a>
             <a type="button"  href='./cobertura.html'class="btn-menu  ">Cobertura</a>     
         </div>
