--- a/planos.html
+++ b/planos.html
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg  ">
         
-        <img src="./assets/img/logo.svg"  />
+        <img src="./assets/img/logo.png"  />
         
         <button class="navbar-toggler btn-outline-light p-3 text-center" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         |||
