modificando cards da pagina de planos

--- a/planos.html
+++ b/planos.html
@@ -47,7 +47,7 @@
             </div>
           </div>
 
-          <div class="card text-white shadow-lg plano2 border border-secondary text-secondary" style="max-width: 24rem;  height:380px; margin-left: 15px; margin-right: 15px;" >
+          <div class="card text-white shadow-lg plano2 border border-secondary text-secondary col-xs-12 col-xl-4 col-sm-6 style="max-width: 26rem;  height:420px; margin-left: 15px; margin-right: 15px;" >
             <div class="card-header">🔥 Plano Estrela 🔥</div>
             <div class="card-body bg-light">
                 <span class="badge badge-secondary">Plano custo benéficio</span>
@@ -57,9 +57,9 @@
                     <li class="list-group-item   p-0 text-secondary bg-light"><span class="text-success">⏩</span> Assístencia Técnica 24H</li>
                     <li class="list-group-item   p-0 text-secondary bg-light"><span class="text-success">⏩</span> Serviço de Qualidade</li>
                     <li class="list-group-item   p-0 text-secondary bg-light"><span class="text-success">⏩</span> Pagamento via Carne</li>
-                    <li class="list-group-item   p-0 text-secondary" ><span class="text-success">⏩</span> Garantia no Roteador da empresa</li>
-                    <a href="/#plano2" class="btn mt-4 btn-outline-dark col-md-12">Contratar</a>
+                    <li class="list-group-item   p-0 text-secondary bg-light" ><span class="text-success">⏩</span> Garantia no Roteador da empresa</li>
                 </ul>
+                <a href="/#plano2" class="btn mt-2 btn-outline-dark col-md-12">Contratar</a>
             </div>
           </div>
 
