--- a/planos.html
+++ b/planos.html
@@ -43,7 +43,7 @@
                     <li class="list-group-item   p-0 text-light bg-info"><span class="text-success">⏩</span> Pagamento via Carne</li>
                     <li class="list-group-item   p-0 text-light bg-info"><span class="text-success">⏩</span> Plano econômico</li>
                 </ul>
-                <a href="/index.html" class="btn mt-1 btn-outline-light col-md-12">Contratar</a>
+                <a href="./index.html" class="btn mt-1 btn-outline-light col-md-12">Contratar</a>
             </div>
           </div>
 
@@ -59,7 +59,7 @@
                     <li class="list-group-item   p-0 text-secondary bg-light"><span class="text-success">⏩</span> Pagamento via Carne</li>
                     <li class="list-group-item   p-0 text-secondary bg-light" ><span class="text-success">⏩</span> Garantia no Roteador da empresa</li>
                 </ul>
-                <a href="/index.html" class="btn mt-2 btn-outline-dark col-md-12">Contratar</a>
+                <a href="./index.html" class="btn mt-2 btn-outline-dark col-md-12">Contratar</a>
             </div>
           </div>
 
@@ -75,7 +75,7 @@
                     <li class="list-group-item   p-0 bg-danger text-white "><span class="text-success">⏩</span> Pagamento via Carne</li>
                     <li class="list-group-item   p-0 bg-danger text-white "><span class="text-success">⏩</span> Garantia no Roteador da empresa</li>
                 </ul>
-                <a href="/index.html" class="btn mt-1 btn-outline-light col-md-12">Contratar</a>
+                <a href="./index.html" class="btn mt-1 btn-outline-light col-md-12">Contratar</a>
             </div>  
           </div>
         </div>
